# scanner-task

./: .gitignore  Dockerfile  README.rst  entry.sh  pyproject.toml  tox.ini
notes/: Ss13U803.js  captcha.js  contact_info.html  contact_info_readable.html  cookies.txt  extract_data_result.json  http_proxies.txt  injection.js  profile_page1_ref.html  profiles_page1_src.html  snowplow.js  socks4_proxies.txt
notes/samples/: contact.txt  contact_page_nl7t.html  freelancer.txt  freelancers_page_9ntr.html
scanner_task/: __main__.py  app.py
scanner_task/bypassing/: cookie_utils.py  cursor_movement.py  mousemovements.json
scanner_task/common/: classes.py  constants.py  utils.py
scanner_task/data/: data_loader.py  extract_data.py
scanner_task/navigation/: auth.py  base.py  setup.py
scanner_task/resources/page_sources/: contact_page.html  freelancers_page.html
tests/: test_scanner_task.py
