[tool.poetry]
name = "scanner_task"
version = "0.1.0"
description = ""
authors = ["Mathaus <mathauskiiw@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.8"
bs4 = "^0.0.1"
pydash = "^5.1.0"
pydantic = "^1.9.0"
flake8 = "^4.0.1"
pyotp = "^2.6.0"
retrying = "^1.3.3"
webdriver-manager = "^3.5.2"
selenium-stealth = "^1.0.6"
mouse = "^0.7.1"
mypy = "^0.931"
undetected-chromedriver = "^3.1.3"
asyncio = "^3.4.3"
aiofiles = "^0.8.0"

[tool.poetry.dev-dependencies]
pytest = "^5.2"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
